# Cuda-ML-core

./: .gitignore  CMakeLists.txt  README.md
examples/: debug_test.cpp  test_linear_regression.cpp
include/cudaml/models/: linear_regression.hpp
kernels/: linear_reg_kernels.cuh  linear_regression.cuh  math_kernels.cuh
src/: linear_regression.cu
